--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <login-kairos domain="kelvin-72b3f.firebaseapp.com" apikey="AIzaSyCf9UH_kwB7eslzFrjiC9kJu327iE0mKZM">
+  <login-kairos domain="YOUR_FIRBASE_DOMAIN_WITHOUT_HTTP_PROTOCOL" apikey="YOUR_APIKEY">
   </login-kairos>
 
 </body>
