--- a/login-kairos.html
+++ b/login-kairos.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
-<link rel="import" href="../bower_components/polymerfire/firebase-app.html">
-<link rel="import" href="../bower_components/polymerfire/firebase.html">
+<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="../polymerfire/firebase-auth.html">
+<link rel="import" href="../polymerfire/firebase-app.html">
+<link rel="import" href="../polymerfire/firebase.html">
 
 
 <dom-module id="login-kairos">
@@ -186,7 +186,6 @@
       _onClick(e) {
         if (this.user === null) {
           this.signInWithPopup();
-          this.changeButtonNameToLogout()
         } else {
           this.signOut();
           this.changeButtonNameToLogin();
@@ -205,9 +204,6 @@
         this.buttonName = 'login';
       }
 
-      changeButtonNameToLogout() {
-        this.buttonName = 'logout';
-      }
 
       signInWithPopup() {
         firebase.auth().signInWithPopup(this.provider).then(function (result) {
