change size and added max-width

--- a/login-kairos.html
+++ b/login-kairos.html
@@ -28,6 +28,8 @@
 
         display: block;
         font-family: 'Montserrat', sans-serif;
+        display: flex;
+        justify-content: center;
       }
 
       #btn-login,
@@ -37,7 +39,8 @@
         background-color: var(--app-color-midtone);
         margin: 8px 0px 26px 0px;
         padding: 19px 0;
-        width: 100%;
+        width: 260px;
+        max-width: 260px;
         border: none;
         cursor: pointer;
         font: inherit;
