include hd property in html

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <login-kairos domain="YOUR_FIRBASE_DOMAIN_WITHOUT_HTTP_PROTOCOL" apikey="YOUR_APIKEY">
+  <login-kairos domain="YOUR_FIRBASE_DOMAIN_WITHOUT_HTTP_PROTOCOL" apikey="YOUR_APIKEY" hd="YOUR_HOST_DOMAIN">
   </login-kairos>
 
 </body>
